force-app/main/default/objects/FundingOpportunity/fields/EP_Owner_Occupied_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>EP_Owner_Occupied_Cost_Cap__c</fullName>
    <description>Energy Efficiency Owner Occupied Cost Cap</description>
    <inlineHelpText>Energy Efficiency Owner Occupied Cost Cap</inlineHelpText>
    <label>EP Owner Occupied Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>