force-app/main/default/objects/FundingOpportunity/fields/EP_Private_Rented_other_Homes_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>EP_Private_Rented_other_Homes_Cost_Cap__c</fullName>
    <inlineHelpText>Energy Efficiency Private Rented other Homes Cost Cap</inlineHelpText>
    <label>EP Private Rented other Homes Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>