force-app/main/default/objects/FundingOpportunity/fields/EP_Social_Rented_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>EP_Social_Rented_Cost_Cap__c</fullName>
    <inlineHelpText>Energy Efficiency Social Rented Cost Cap</inlineHelpText>
    <label>EP Social Rented Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>