force-app/main/default/objects/FundingOpportunity/fields/Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount__c</fullName>
    <description>Formula Field that represents budget allocated to this Grant Scheme. Edits must be made using Budget records</description>
    <formula>Scheme_Budget__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field that represents budget allocated to this Grant Scheme. Edits must be made using Budget records</inlineHelpText>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>