force-app/main/default/objects/FundingOpportunity/fields/Funding_Scheme_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme_Acronym__c</fullName>
    <description>Short name for scheme</description>
    <inlineHelpText>Short name for scheme</inlineHelpText>
    <label>Funding Scheme Acronym</label>
    <length>10</length>
    <type>Text</type>
</CustomField>