force-app/main/default/objects/FundingOpportunity/fields/Funding_Scheme_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme_Number__c</fullName>
    <description>Autonumber to identify scheme eg FO-000001</description>
    <displayFormat>FO-{000000}</displayFormat>
    <label>Funding Scheme Number</label>
    <type>AutoNumber</type>
</CustomField>