force-app/main/default/objects/FundingOpportunity/fields/Funding_Scheme_Reference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme_Reference__c</fullName>
    <formula>Funding_Scheme_Acronym__c + &quot;-&quot; + Funding_Scheme_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Scheme Reference</label>
    <type>Text</type>
</CustomField>