force-app/main/default/objects/FundingOpportunity/fields/FY_25_26_End__c.field-meta.xml
<CustomField>
    <fullName>FY_25_26_End__c</fullName>
    <defaultValue>DATE(2026,03,31)</defaultValue>
    <description>Last day of FY 25/26</description>
    <inlineHelpText>Last day of FY 25/26</inlineHelpText>
    <label>FY 25/26 End</label>
    <type>Date</type>
</CustomField>