force-app/main/default/objects/FundingOpportunity/fields/FY_25_26_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_25_26_Start__c</fullName>
    <defaultValue>DATE(2025,04,01)</defaultValue>
    <description>First day of FY 25/26</description>
    <inlineHelpText>First day of FY 25/26</inlineHelpText>
    <label>FY 25/26 Start</label>
    <type>Date</type>
</CustomField>