force-app/main/default/objects/FundingOpportunity/fields/FY_26_27_End__c.field-meta.xml
<CustomField>
    <fullName>FY_26_27_End__c</fullName>
    <defaultValue>DATE(2027,03,31)</defaultValue>
    <description>Last day of FY 26/27</description>
    <inlineHelpText>Last day of FY 26/27</inlineHelpText>
    <label>FY 26/27 End</label>
    <type>Date</type>
</CustomField>