force-app/main/default/objects/FundingOpportunity/fields/FY_26_27_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_26_27_Start__c</fullName>
    <defaultValue>DATE(2026,04,01)</defaultValue>
    <description>First day of FY 26/27</description>
    <inlineHelpText>First day of FY 26/27</inlineHelpText>
    <label>FY 26/27 Start</label>
    <type>Date</type>
</CustomField>