force-app/main/default/objects/FundingOpportunity/fields/FY_27_28_End__c.field-meta.xml
<CustomField>
    <fullName>FY_27_28_End__c</fullName>
    <defaultValue>DATE(2028,03,31)</defaultValue>
    <description>Last day of FY 27/28</description>
    <inlineHelpText>Last day of FY 27/28</inlineHelpText>
    <label>FY 27/28 End</label>
    <type>Date</type>
</CustomField>