force-app/main/default/objects/FundingOpportunity/fields/FY_27_28_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_27_28_Start__c</fullName>
    <defaultValue>DATE(2027,04,01)</defaultValue>
    <description>First day of FY 27/28</description>
    <inlineHelpText>First day of FY 27/28</inlineHelpText>
    <label>FY 27/28 Start</label>
    <type>Date</type>
</CustomField>