force-app/main/default/objects/FundingOpportunity/fields/LCH_Owner_Occupied_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>LCH_Owner_Occupied_Cost_Cap__c</fullName>
    <inlineHelpText>Low Carbon Heat Owner Occupied Cost Cap</inlineHelpText>
    <label>LCH Owner Occupied Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>