force-app/main/default/objects/FundingOpportunity/fields/LCH_Private_Rented_Other_Homes_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>LCH_Private_Rented_Other_Homes_Cost_Cap__c</fullName>
    <inlineHelpText>Low Carbon Heat Private Rented Other Homes Cost Cap</inlineHelpText>
    <label>LCH Private Rented Other Homes Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>