force-app/main/default/objects/FundingOpportunity/fields/LCH_Social_Rented_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>LCH_Social_Rented_Cost_Cap__c</fullName>
    <inlineHelpText>Low Carbon Heat Social Rented Cost Cap</inlineHelpText>
    <label>LCH Social Rented Cost Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>