force-app/main/default/objects/FundingOpportunity/fields/Scheme_Budget__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Budget for the Scheme as whole</description>
    <label>Scheme Budget</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>