force-app/main/default/objects/FundingOpportunity/fields/Scheme_Email__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Email__c</fullName>
    <description>To store the shared mailbox for the scheme.</description>
    <label>Scheme Email</label>
    <type>Email</type>
</CustomField>