force-app/main/default/objects/FundingOpportunity/fields/Scheme_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Reporting_Date__c</fullName>
    <description>Populated by flow logic that determines when monthly reports are due</description>
    <label>Scheme Reporting Date</label>
    <type>Date</type>
</CustomField>