force-app/main/default/objects/FundingOpportunity/fields/Self_Evaluation_A1_Form_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_A1_Form_Deadline_Date__c</fullName>
    <label>Self Evaluation A1 Form Deadline Date</label>
    <type>Date</type>
</CustomField>