force-app/main/default/objects/FundingOpportunity/fields/Self_Evaluation_A1_Form_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_A1_Form_Launch_Date__c</fullName>
    <description>Date set to trigger self evaluation form</description>
    <label>Self Evaluation A1 Form Launch Date</label>
    <type>Date</type>
</CustomField>