force-app/main/default/objects/FundingOpportunity/fields/Trigger_Reporting_Date_Update__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Reporting_Date_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger to enable scheduled path on reporting date change flow</description>
    <label>Trigger Reporting Date Update</label>
    <type>Checkbox</type>
</CustomField>