force-app/main/default/objects/FundingOpportunity/recordTypes/Scheme_Funding.recordType-meta.xml
<RecordType>
    <fullName>Scheme_Funding</fullName>
    <active>true</active>
    <label>Scheme Funding</label>
</RecordType>